# 3D-Graphics

./: .env  2d.cpp  2d.h  3D-Graphics-Engine.js  3D-Graphics-Engine.wasm  3d.cpp  3d.h  CMakeLists.txt  README.md  _config.yml  coi-serviceworker.js  enable-threads.js  graphics.cpp  graphics.h  index.html  index.js  main  main.cpp  main.html  main.py  package-lock.json  package.json  style.css  threads.cpp  threads.h  tsconfig.json  typescript.js  typescript.js.map  typescript.ts  vite.config.js  window.cpp  window.h
.cache/clangd/index/: 2d.cpp.314AB143CD0859E2.idx  2d.h.08E4B9C5180C442F.idx  3d.cpp.8ED4B1A357E5D1AE.idx  3d.h.F53E53595AD058D0.idx  camera.cpp.77A1402CEFE5D5F1.idx  camera.h.0FC805BF5A5EACD9.idx  game.cpp.FA3024509ECA6079.idx  game.h.939B45300042688F.idx  graphics.cpp.3BAF84D67290974D.idx  graphics.cpp.C9622C2145173EAF.idx  graphics.h.0F7C084EF85402FD.idx  graphics.h.953EA05DCDB90AD0.idx  hitRecord.cpp.DB454083143DECFB.idx  hitRecord.h.E4AEB3013B74B848.idx  interval.cpp.A5F1F14DC2FD6CDF.idx  interval.h.5DEF41BE718FA535.idx  light.cpp.B56B0180D56E0790.idx  light.h.592CD39CEA7BB9E1.idx  main.cpp.603511FB3996E922.idx  main.cpp.952AE906CE737898.idx  main2.cpp.F89775E165BA413E.idx  material.cpp.9F37530A935CECFB.idx  material.h.1E75D1C99B11F1DA.idx  object3D.cpp.86AE9E3798EDB528.idx  object3D.h.75F624975E970CE2.idx  object3d.cpp.DC4073A18B0E7AE4.idx  pixelArray.cpp.07E2E1F8C8EC7DE4.idx  pixelArray.h.4791E5CE3DD90875.idx  ray.cpp.4BFE43A0C3C9C552.idx  ray.h.5D08A00171D3955B.idx  sphere.cpp.15EFA434813343FC.idx  sphere.h.0589CAAFA7F1B08B.idx  threads.cpp.5B1A2DB2D0C27345.idx  threads.cpp.EBF1EFD9B67AD488.idx  threads.h.107A4359BE2559D4.idx  threads.h.2EFDF42759E49406.idx  utils.cpp.16D02B5D88440191.idx  utils.h.CEF204C865803A84.idx  vec3.cpp.D8EDF173E41676C0.idx  vec3.h.3A55C80EC50BCFE0.idx  (+4 more)
.github/workflows/: deploy.yml
3D-graphics/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
3D-graphics/src/: cppInterface.ts  database.ts  database.types.ts  enable-threads.js  imageGallery.ts  input.ts  leftSideBar.ts  main.ts  rightSideBar.ts  style.css
3D-graphics/src/cpp/: 3D-Graphics.js  3D-Graphics.wasm
OLD VITE/: package.json  vite.config.js
OLD VITE/public/: 3D-Graphics.js
OLD VITE/src/: cppInterface.ts  database.ts  graphics.ts  leftSideBar.ts  main.ts  rightSideBar.ts  style.css
assets/: 3D-Graphics-9wZ-MuTc.js  3D-Graphics-CZfk-mMh.js  browser-BT_Nztmn.js  browser-BfQ4MUZa.js  browser-DUoPbrTy.js  browser-DzCgDm-R.js  index-B2jcumWp.js  index-BAOJSVxl.js  index-BScYDPPU.css  index-BcTL5JXf.js  index-C7qzexlL.css  index-CHS2-qr-.js  index-COCLass3.js  index-CTg-0isG.js  index-DTKq7I_8.js  index-Dltzf9QZ.js  index-Dw8SiTVx.js  wasm_graphics-CMYqyp6n.js  wasm_graphics-f2AHluEP.js  wasm_graphics-u_4dXINf.js  wasm_graphics_bg-8CmsZFUv.wasm  workerHelpers-1o8OWibW.js  workerHelpers-DqOpWGS2.js  workerHelpers-Dw453bGc.js
cpp/: camera.cpp  camera.h  game.cpp  game.h  graphics.cpp  graphics.h  hitRecord.cpp  hitRecord.h  interval.cpp  interval.h  light.cpp  light.h  main.cpp  main2.cpp  material.cpp  material.h  object3D.cpp  object3D.h  pixelArray.cpp  pixelArray.h  ray.cpp  ray.h  sphere.cpp  sphere.h  threads.cpp  threads.h  utils.cpp  utils.h  vec3.cpp  vec3.h  zBuffer.cpp  zBuffer.h
database/: database.types.js  database.types.ts  supabase.js  supabase.js.map  supabase.ts
src/: cppInterface.ts  graphics.ts  input.ts  leftSideBar.ts  main.ts  rightSideBar.ts  style.css
src/cpp/: 3D-Graphics.js
static/: angel.stl
wasm-graphics/: Cargo.toml  build.sh
wasm-graphics/src/: articulated_rose.stl  lib.rs
wasm-graphics/src/graphics/: buffers.rs  camera.rs  game.rs  gltf_parser.rs  lighting.rs  mesh.rs  mod.rs  rt.rs  scene.rs  scene_object.rs
wasm-graphics/src/graphics/ray_tracing/: bvh.rs  hittable.rs  material.rs  mod.rs  rt.rs
wasm-graphics/src/utils/: math.rs  utils.rs
wasm-graphics/src/wasm/: wasm.rs
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
web/public/static/: roza_bust.glb
web/src/: App.tsx  gameContext.tsx  index.tsx  wasmToJSBridge.ts
web/src/MainCanvas/: MainCanvas.css  MainCanvas.tsx
web/src/components/: mode-toggle.tsx  theme-provider.tsx
web/src/react_components/: App.tsx  MainCanvas.tsx
web/src/react_components/SceneControlPanel/: AddObjectPanel.tsx  InstructionsDialog.tsx  SceneControlPanel.tsx
web/src/react_components/SceneControlPanel/EditPanel/: EditPanel.tsx  MaterialEditorControls.tsx  TransformControls.tsx
web/static/goose_low_poly_gltf/: scene.gltf
web/wasm/: package.json  wasm_graphics.d.ts  wasm_graphics.js  wasm_graphics_bg.wasm.d.ts
