[package]
name = "wasm-graphics"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7"}
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "console",
    "Performance",
    "Event",
    "KeyboardEvent",
    "MouseEvent",
] }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O4']

