[package]
name = "wasm-graphics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="0.2.100"
wasm-bindgen-futures = "0.4.50"
rayon = "1.10.0"
wasm-bindgen-rayon = "1.3.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7"}
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "console",
    "Performance",
    "Event",
    "KeyboardEvent",
    "MouseEvent",
] }
stl_io = "0.8.3"
gltf = { version = "1.4.1", features = [
    "utils",
    "import",
    "KHR_lights_punctual",
    "KHR_materials_pbrSpecularGlossiness",
]}
image = "0.25.5"
data-url = "0.3.1"
rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O4']

